--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,4 +19,6 @@
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 {{ "<!--[if lt IE 9]><script src=\"//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js\"></script><script src=\"//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js\"></script><![endif]-->" | safeHTML }}
 
-{{ template "_internal/google_analytics.html" . }}
+{{ if not (in (printf "%#v" .Site.BaseURL) "localhost") }}
+  {{ template "_internal/google_analytics.html" . }}
+{{ end }}
