--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,9 +1,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}" />
-<meta name="author" content="{{ with .Site.Params.name }}{{ . }}{{ end }}" />
-{{ .Hugo.Generator }}
+{{ with .Site.Params.description }}<meta name="description" content="{{ . }}" />{{ end }}
+{{ with .Site.Params.name }}<meta name="author" content="{{ . }}" />{{ end }}
 
 <title>{{ .Site.Title }}</title>
 
@@ -17,8 +16,8 @@
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oswald:400,300,700|EB+Garamond">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-{{ "<!--[if lt IE 9]><script src=\"//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js\"></script><script src=\"//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js\"></script><![endif]-->" | safeHTML }}
+{{ "<!--[if lt IE 9]><script src=\"assets/js/html5shiv.js\"></script><script src=\"assets/js/respond.min.js\"></script><![endif]-->" | safeHTML }}
 
-{{ if not (in (printf "%#v" .Site.BaseURL) "localhost") }}
+{{ if and (.Site.GoogleAnalytics) (not (in (printf "%#v" .Site.BaseURL) "localhost")) }}
   {{ template "_internal/google_analytics.html" . }}
 {{ end }}
